desktop design  coding is done | not responsive

--- a/css/card-heading.css
+++ b/css/card-heading.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-bottom: 8rem;
 }
 .reviews-text {
   max-width: 44.5rem;
