--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 5rem 2.5rem;
+  background-image: url(../images/bg-pattern-top-desktop.svg),
+    url(../images/bg-pattern-bottom-desktop.svg);
+  background-repeat: no-repeat, no-repeat;
 }
 main {
   max-width: 1100px;
