--- a/css/card-heading.css
+++ b/css/card-heading.css
@@ -19,7 +19,9 @@
 }
 
 h1 {
+  /* font-size: clamp(var(--h1-s-size), 60rem, var(--h1-size)); */
   font-size: var(--h1-size);
+  font-weight: 700;
   color: var(--magenta);
   line-height: var(--h1-line-height);
   letter-spacing: var(--h1-letter-spacing);
