--- a/css/testimonials-section.css
+++ b/css/testimonials-section.css
@@ -58,13 +58,45 @@
   letter-spacing: -0.025rem;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 910px) {
+  h1 {
+    font-size: var(--h1-s-size);
+    line-height: 3.2rem;
+    letter-spacing: -0.114rem;
+    text-align: center;
+  }
   .reviews {
     flex-direction: column;
-    text-align: center;
+  }
+  .review-title {
+    width: 100%;
+  }
+
+  .review {
+    justify-content: center;
+    width: 160%;
+    flex-direction: column;
+    max-width: none;
+    padding-right: 3.2rem;
+    padding-left: 3.2rem;
+    width: 100%;
+    align-items: center;
   }
   .reviews-text {
     margin-bottom: 6rem;
+  }
+  .review-title {
+    text-align: left;
+    text-align: center;
+  }
+  .star-icon {
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 1.6rem;
+    margin-right: 0;
+  }
+  .reviews-stars {
+    width: 100%;
   }
   .reviews-stars .review:first-child {
     margin-left: 0;
@@ -79,5 +111,10 @@
   }
   .testimonials article {
     max-width: none;
+  }
+  body {
+    text-align: center;
+    background-image: url(../images/bg-pattern-top-mobile.svg);
+    background-repeat: no-repeat;
   }
 }
