--- a/css/testimonials-section.css
+++ b/css/testimonials-section.css
@@ -5,7 +5,7 @@
   justify-items: center;
   gap: 1rem;
 }
-.testimonials article {
+.testimonials .article {
   background-color: var(--magenta);
   max-width: 32.4rem;
   width: 100%;
@@ -14,10 +14,10 @@
   height: 100%;
 }
 
-.testimonials article:nth-child(2) {
+.testimonials .article:nth-child(2) {
   margin-top: 2rem;
 }
-.testimonials article:nth-child(3) {
+.testimonials .article:nth-child(3) {
   margin-top: 4rem;
 }
 
@@ -109,7 +109,7 @@
     align-items: center;
     flex-direction: column;
   }
-  .testimonials article {
+  .testimonials .article {
     max-width: none;
   }
   body {
